base/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: python-app
  namespace: app-dev
spec:
  selector:
    matchLabels:
      app: python-app
  replicas: 3
  template:
    metadata:
      labels:
        app: python-app
    spec:
      containers:
        - name: python-app
          image: >-
            hybrid2k3/petclinic:env.BUILD_NUMER
          ports:
            - containerPort: 8080
