base/pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: react
  labels:
    app: react
  namespace: app-dev
spec:
  containers:
    - name: react
      image: 'registry.hub.docker.com/hybrid2k3/petclinic:5'
      ports:
        - containerPort: 3000
