base/route.yml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: python-basic
spec:
  host: python-basic-python.apps.cluster-psp75.psp75.sandbox817.opentlc.com
  to:
    kind: Service
    name: python-app
    weight: 100
  port:
    targetPort: '8081'
  wildcardPolicy: None
